# oneclick-setup

./: .gitignore  pyproject.toml  requirements.txt
oneclicksetup/scripts/: install_deps_macos.sh  install_deps_ubuntu.sh
test_env/: pyvenv.cfg
